[tool.poetry]
name = "my-booking-fastapi"
version = "0.1.0"
description = ""
authors = ["Alexandr Shevchenko <djpestro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
